# ForgeLab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent-bootstrap.md
examples/: README.md
examples/hardware/: arduino_uno.forge.json  blinky.forge.json  blinky.kicad_pcb  blinky.kicad_prl  blinky_led.forge.json
examples/mechanical/: box-with-hole.FCStd  box-with-hole.forge.json  bracket_with_boss.forge.json  enclosure.forge.json  motor-mount.FCStd  motor-mount.forge.json  motor_mount.forge.json  organic_grip.forge.json  rounded_knob.forge.json  rounded_rect_plate.forge.json
examples/threed/: cube.forge.json  cube.gltf  organic_handle.forge.json  (+3 more)
forgelab/: __init__.py  cli.py  history.py
scripts/: install-claude-code.sh  install-codex.sh  install.sh
tests/: test_api.py  test_api_auth.py  test_auth_config.py  test_auth_dev_server.py  test_auth_fastapi.py  test_auth_models.py  test_auth_verifier.py  test_blender_modifiers.py  test_blender_script_exporter.py  test_boolean.py  test_calc.py  test_cli_init.py  test_copper_zones.py  test_core.py  test_drc_warnings.py  test_examples.py  test_export_determinism.py  test_fcstd_codec.py  test_freecad_e2e.py  test_freecad_exporter.py  test_freecad_importer.py  test_freecad_roundtrip.py  test_gerber_export.py  test_gltf_codec.py  test_gltf_exporter.py  test_gltf_importer.py  test_gltf_roundtrip.py  test_install_script.py  test_kicad_exporter.py  test_kicad_importer.py  test_kicad_roundtrip.py  test_layout_placement.py  test_layout_routing.py  test_mcp_analyze_image.py  test_mcp_auth_bridge.py  test_mcp_bom.py  test_mcp_cli.py  test_mcp_components.py  test_mcp_content.py  test_mcp_history.py  (+37 more)
(+118 files in other folders)
